# prayoga

./: .gitignore  CLAUDE.md  LICENSE  PROVENANCE.md  README.md  pyproject.toml
.github/workflows/: pages.yml  test.yml
data/: findings_registry.json
data/prompts/: harmful.txt  harmless.txt
data/prompts/regimes/: jagrat.txt  susupti.txt  svapna.txt
docker/: Dockerfile.dgx-spark  README.md
docs/: ADVERSARIAL_REVIEW.md  CONCEPTUAL_COVERAGE.md  DUAL_USE_POLICY.md  FINDINGS.md  IMPLEMENTATION_STRATEGY.md  PROJECT_REVIEW.md  SOURCE_OF_TRUTH.md  TRAJECTORY_PROBE.md  agentdojo_demo.md  osf_preregistration.md  prayoga_objectives.md  prayoga_opening_research.md  research2.txt  spec.md
hf_space/: PROVENANCE.md  README.md  agentdojo_demo.json  app.py  findings.json  metrics.json  requirements.txt
notebooks/: 00_explore_results.ipynb  01_reproduce_refusal_direction.ipynb  02_agentic_symmetry_breaking.ipynb  README.md
paper/: paper.tex  references.bib  symmetry_draft.md
paper/Definitions/: mdpi.cls
paper/sections/: abstract.tex  appendix.tex  background.tex  conclusion.tex  discussion.tex  dynamics.tex  introduction.tex  methods.tex  positioning.tex  results.tex
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: active.md  agentdojo.md  dimensionality.md  dose.md  ec50-scaling.md  refusal.md  satkarma.md  status.md  symmetry.md  trajectory-probe.md  triangulation.md
scripts/: agentdojo_run.py  check_paper_sources.py  check_plugin_manifest.py  export_aggregates.py  make_figures.py  make_graphical_abstract.py  make_notebooks.py
site/: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs
src/prayoga/: __init__.py
tests/: test_axis_a.py  test_axis_b.py  test_axis_c.py  test_axis_x.py  test_public_artifacts.py  test_shared.py  test_smoke.py  test_source_of_truth.py  test_tier1.py
(+95 files in other folders)
